--- a/exercise_03.ipynb
+++ b/exercise_03.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +539,7 @@
        ")"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,11 +562,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[49406,   320,  1125,   539,   320, 49407,     0,     0,     0,     0,\n",
+       "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "             0,     0,     0,     0,     0,     0,     0]], device='cuda:0',\n",
+       "       dtype=torch.int32)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "prompt = 'a photo of a' # you can try different prompt\n",
     "\n",
     "def prompt_encode(prompt):\n",
     "    \"\"\"\n",
@@ -578,11 +596,13 @@
     "\n",
     "    \"\"\"\n",
     "    ##################### Write your answer here ##################\n",
-    "    \n",
-    "\n",
+    "    text_inputs = clip.tokenize(prompt).to(device)\n",
     "    ###############################################################\n",
     "    \n",
-    "    return text_inputs\n"
+    "    return text_inputs\n",
+    "prompt = 'a photo of a' # you can try different prompt\n",
+    "text_inputs = prompt_encode(prompt)\n",
+    "text_inputs"
    ]
   },
   {
@@ -602,19 +622,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "def model_inference(model, image, text_inputs):\n",
+    "    \"\"\"\n",
+    "    Perform model inference to calculate logits for zero-shot learning.\n",
     "\n",
-    "    ##################### Write your answer here ##################\n",
-    "    \n",
+    "    Args:\n",
+    "        model (CLIPModel): The CLIP model for inference.\n",
+    "        image (torch.Tensor): The batch of images to encode.\n",
+    "        text_inputs (torch.Tensor): The batch of text inputs to encode.\n",
     "\n",
-    "    ###############################################################\n",
+    "    Returns:\n",
+    "        torch.Tensor: Logits representing the similarity between images and texts.\n",
+    "    \"\"\"\n",
+    "    # Ensure the model is in evaluation mode\n",
+    "    model.eval()\n",
     "\n",
-    "    return logits"
+    "    # Encode the image using the CLIP model\n",
+    "    with torch.no_grad():\n",
+    "        image_features = model.encode_image(image)\n",
+    "\n",
+    "    # Normalize the image features\n",
+    "    image_features = image_features / image_features.norm(dim=-1, keepdim=True)\n",
+    "\n",
+    "    # Encode the text using the CLIP model's text encoder\n",
+    "    with torch.no_grad():\n",
+    "        text_features = model.encode_text(text_inputs)\n",
+    "\n",
+    "    # Normalize the text features\n",
+    "    text_features = text_features / text_features.norm(dim=-1, keepdim=True)\n",
+    "\n",
+    "    # Calculate the similarity (logits) between each image and text\n",
+    "    logits = image_features @ text_features.t()\n",
+    "\n",
+    "    return logits\n"
    ]
   },
   {
@@ -627,14 +671,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "the zero-shot performance on CIFAR10 is 55.84%, visual encoder is RN50\n"
+      "the zero-shot performance on CIFAR10 is 55.90%, visual encoder is RN50.\n"
      ]
     }
    ],
@@ -647,17 +691,51 @@
     "    model.eval()\n",
     "\n",
     "    ##################### Write your answer here ##################\n",
+    "# Assuming 'test_dataloader' is your DataLoader for the CIFAR10 test dataset\n",
+    "# and 'class_names' is a list of class names\n",
     "\n",
+    "# Encode the text prompts for all classes\n",
+    "text_prompts = [f\"a photo of a {classname}\" for classname in class_names]\n",
+    "text_inputs = clip.tokenize(text_prompts).to(device)\n",
+    "\n",
+    "# Zero-shot accuracy calculation\n",
+    "correct_predictions = 0\n",
+    "total_predictions = 0\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    model.eval()\n",
+    "\n",
+    "    for images, labels in test_dataloader:\n",
+    "        # Move images and labels to the same device as the model\n",
+    "        images = images.to(device)\n",
+    "        labels = labels.to(device)\n",
+    "\n",
+    "        # Perform model inference to get logits\n",
+    "        logits = model_inference(model, images, text_inputs)\n",
+    "\n",
+    "        # Predictions are the indices of the max logit values\n",
+    "        predictions = logits.argmax(dim=-1)\n",
+    "\n",
+    "        # Update correct predictions and total predictions\n",
+    "        correct_predictions += (predictions == labels).sum().item()\n",
+    "        total_predictions += labels.size(0)\n",
+    "\n",
+    "# Calculate accuracy\n",
+    "val_acc = correct_predictions / total_predictions\n",
     "\n",
     "\n",
     "     ###############################################################\n",
-    "\n",
-    "\n",
-    "\n",
-    "    print(f\"the zero-shot performance on {dataset_name} is {val_acc*100:.2f}%, visual encoder is {VISUAL_BACKBONE}.\")\n",
+    "print(f\"the zero-shot performance on {dataset_name} is {val_acc*100:.2f}%, visual encoder is {VISUAL_BACKBONE}.\")\n",
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
