--- a/exercise_03.ipynb
+++ b/exercise_03.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +539,7 @@
        ")"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,6 +579,7 @@
     "    \"\"\"\n",
     "    ##################### Write your answer here ##################\n",
     "    \n",
+    "    text_inputs = torch.cat([clip.tokenize(prompt+f\"{c}\") for c in class_names]).to(device)\n",
     "\n",
     "    ###############################################################\n",
     "    \n",
@@ -602,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,10 +611,14 @@
     "def model_inference(model, image, text_inputs):\n",
     "\n",
     "    ##################### Write your answer here ##################\n",
-    "    \n",
-    "\n",
+    "    image_features = model.encode_image(image)\n",
+    "    text_features = model.encode_text(text_inputs)\n",
+    "    image_features /= image_features.norm(dim=-1, keepdim=True)\n",
+    "    text_features /= text_features.norm(dim=-1, keepdim=True)\n",
+    "    logits = (100.0 * image_features @ text_features.T).softmax(dim=-1)\n",
     "    ###############################################################\n",
     "\n",
+    "#     return logits\n",
     "    return logits"
    ]
   },
@@ -627,14 +632,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "the zero-shot performance on CIFAR10 is 55.84%, visual encoder is RN50\n"
+      "the zero-shot performance on CIFAR10 is 49.87%, visual encoder is RN50.\n"
      ]
     }
    ],
@@ -647,17 +652,27 @@
     "    model.eval()\n",
     "\n",
     "    ##################### Write your answer here ##################\n",
-    "\n",
-    "\n",
-    "\n",
+    "    for batch_idx, (image, target) in enumerate(test_dataloader):\n",
+    "        image = image.to(device)\n",
+    "        target = target.to(device)\n",
+    "        text_inputs=prompt_encode(prompt)\n",
+    "        logits=model_inference(model,image,text_inputs)\n",
+    "        max_indices = torch.argmax(logits, dim=1)\n",
+    "        testing_acc.append((torch.sum(max_indices == target)/len(max_indices)).item())\n",
     "     ###############################################################\n",
+    "val_acc=np.mean(testing_acc)\n",
     "\n",
-    "\n",
-    "\n",
-    "    print(f\"the zero-shot performance on {dataset_name} is {val_acc*100:.2f}%, visual encoder is {VISUAL_BACKBONE}.\")\n",
+    "print(f\"the zero-shot performance on {dataset_name} is {val_acc*100:.2f}%, visual encoder is {VISUAL_BACKBONE}.\")\n",
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
