--- a/exercise_03.ipynb
+++ b/exercise_03.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +539,7 @@
        ")"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,7 +562,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'a photo of a cat'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prompt = 'a photo of a'\n",
+    "c = 'cat'\n",
+    "f\"{prompt} {c}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,8 +600,7 @@
     "\n",
     "    \"\"\"\n",
     "    ##################### Write your answer here ##################\n",
-    "    \n",
-    "\n",
+    "    text_inputs = torch.cat([clip.tokenize(f\"{prompt} {c}\") for c in class_names]).to(device)\n",
     "    ###############################################################\n",
     "    \n",
     "    return text_inputs\n"
@@ -602,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,8 +631,12 @@
     "def model_inference(model, image, text_inputs):\n",
     "\n",
     "    ##################### Write your answer here ##################\n",
-    "    \n",
-    "\n",
+    "    with torch.no_grad():\n",
+    "        image_features = model.encode_image(image)\n",
+    "        text_features = model.encode_text(text_inputs)\n",
+    "    image_features /= image_features.norm(dim=-1, keepdim=True)\n",
+    "    text_features /= text_features.norm(dim=-1, keepdim=True)\n",
+    "    logits = (100.0 * image_features @ text_features.T)\n",
     "    ###############################################################\n",
     "\n",
     "    return logits"
@@ -627,37 +652,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "the zero-shot performance on CIFAR10 is 55.84%, visual encoder is RN50\n"
+      "the zero-shot performance on CIFAR10 is 55.84%, visual encoder is RN50.\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "testing_loss = []\n",
-    "testing_acc = []\n",
-    "\n",
     "with torch.no_grad():\n",
     "    model.eval()\n",
     "\n",
     "    ##################### Write your answer here ##################\n",
+    "    val_corrects = 0\n",
+    "    num = 0\n",
+    "    for batch_idx, (image, target) in enumerate(test_dataloader):\n",
+    "            num += 1\n",
+    "            image = image.to(device)\n",
+    "            target = target.to(device)\n",
+    "            text_inputs = prompt_encode(prompt)\n",
     "\n",
+    "            # test model\n",
+    "            logits = model_inference(model, image, text_inputs)\n",
+    "            values, indices = torch.max(logits, 1)\n",
+    "            #print(f\"Logits: {logits}\")\n",
+    "            #print(f\"Target: {target}\")\n",
+    "            #print(f\"Predicted: {indices}\")\n",
     "\n",
-    "\n",
+    "            val_corrects += torch.sum(indices == target.data).item()\n",
+    "            \n",
+    "    val_acc = val_corrects / len(test_set)\n",
     "     ###############################################################\n",
-    "\n",
-    "\n",
-    "\n",
-    "    print(f\"the zero-shot performance on {dataset_name} is {val_acc*100:.2f}%, visual encoder is {VISUAL_BACKBONE}.\")\n",
-    "\n",
-    "\n"
+    "    print(f\"the zero-shot performance on {dataset_name} is {val_acc*100:.2f}%, visual encoder is {VISUAL_BACKBONE}.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
