--- a/exercise_03.ipynb
+++ b/exercise_03.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +539,7 @@
        ")"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,11 +562,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "prompt = 'a photo of a' # you can try different prompt\n",
+    "prompt = 'this is a photo of a ' # you can try different prompt\n",
     "\n",
     "def prompt_encode(prompt):\n",
     "    \"\"\"\n",
@@ -578,10 +578,8 @@
     "\n",
     "    \"\"\"\n",
     "    ##################### Write your answer here ##################\n",
-    "    \n",
-    "\n",
+    "    text_inputs = torch.cat([clip.tokenize(prompt + c) for c in class_names]).to(device)\n",
     "    ###############################################################\n",
-    "    \n",
     "    return text_inputs\n"
    ]
   },
@@ -602,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,8 +608,8 @@
     "def model_inference(model, image, text_inputs):\n",
     "\n",
     "    ##################### Write your answer here ##################\n",
-    "    \n",
-    "\n",
+    "    logits_per_image, logits_per_text = model(image, text_inputs)\n",
+    "    logits = logits_per_image.softmax(dim=-1).cpu().numpy()\n",
     "    ###############################################################\n",
     "\n",
     "    return logits"
@@ -627,14 +625,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "the zero-shot performance on CIFAR10 is 55.84%, visual encoder is RN50\n"
+      "tensor([[49406,   589,   533,   320,  1125,   539,   320, 16451, 49407,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0],\n",
+      "        [49406,   589,   533,   320,  1125,   539,   320, 25258, 49407,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0],\n",
+      "        [49406,   589,   533,   320,  1125,   539,   320,  3329, 49407,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0],\n",
+      "        [49406,   589,   533,   320,  1125,   539,   320,  2368, 49407,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0],\n",
+      "        [49406,   589,   533,   320,  1125,   539,   320,  8700, 49407,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0],\n",
+      "        [49406,   589,   533,   320,  1125,   539,   320,  1929, 49407,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0],\n",
+      "        [49406,   589,   533,   320,  1125,   539,   320, 11438, 49407,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0],\n",
+      "        [49406,   589,   533,   320,  1125,   539,   320,  4558, 49407,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0],\n",
+      "        [49406,   589,   533,   320,  1125,   539,   320,  1158, 49407,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0],\n",
+      "        [49406,   589,   533,   320,  1125,   539,   320,  4629, 49407,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0]], device='cuda:0',\n",
+      "       dtype=torch.int32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "prompt = prompt_encode(prompt)\n",
+    "print(prompt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the zero-shot performance on CIFAR10 is 78.04%, visual encoder is RN50.\n"
      ]
     }
    ],
@@ -647,14 +743,20 @@
     "    model.eval()\n",
     "\n",
     "    ##################### Write your answer here ##################\n",
+    "    count_true = 0\n",
+    "    for batch_idx, (image, target) in enumerate(test_dataloader):\n",
+    "        image = image.to(device)\n",
+    "        target = target\n",
+    "        out = model_inference(model,image,prompt)\n",
+    "        max_values = np.argmax(out, axis=1)  \n",
+    "        for i in range(len(max_values)):\n",
+    "            if max_values[i] == target[i]:\n",
+    "                count_true +=1\n",
+    "    val_acc = count_true/len(test_dataloader)\n",
+    "    ###############################################################\n",
     "\n",
     "\n",
-    "\n",
-    "     ###############################################################\n",
-    "\n",
-    "\n",
-    "\n",
-    "    print(f\"the zero-shot performance on {dataset_name} is {val_acc*100:.2f}%, visual encoder is {VISUAL_BACKBONE}.\")\n",
+    "    print(f\"the zero-shot performance on {dataset_name} is {val_acc:.2f}%, visual encoder is {VISUAL_BACKBONE}.\")\n",
     "\n",
     "\n"
    ]
