--- a/exercise_03.ipynb
+++ b/exercise_03.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +539,7 @@
        ")"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,11 +562,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "prompt = 'a photo of a' # you can try different prompt\n",
+    "prompt = 'A photo of a' # you can try different prompt\n",
     "\n",
     "def prompt_encode(prompt):\n",
     "    \"\"\"\n",
@@ -578,7 +578,8 @@
     "\n",
     "    \"\"\"\n",
     "    ##################### Write your answer here ##################\n",
-    "    \n",
+    "\n",
+    "    text_inputs = torch.cat([clip.tokenize(f\"{prompt} {c}\") for c in test_set.classes]).to(device)    \n",
     "\n",
     "    ###############################################################\n",
     "    \n",
@@ -602,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,10 +611,15 @@
     "def model_inference(model, image, text_inputs):\n",
     "\n",
     "    ##################### Write your answer here ##################\n",
-    "    \n",
+    "    with torch.no_grad():\n",
+    "        image_features = model.encode_image(image)\n",
+    "        text_features = model.encode_text(text_inputs)\n",
+    "       \n",
     "\n",
+    "    logits_per_image, logits_per_text = model(image, text_inputs)\n",
+    "    probs = logits_per_image.softmax(dim=-1).cpu().numpy()\n",
+    "    logits = logits_per_image\n",
     "    ###############################################################\n",
-    "\n",
     "    return logits"
    ]
   },
@@ -627,36 +633,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "the zero-shot performance on CIFAR10 is 55.84%, visual encoder is RN50\n"
+      "The zero-shot performance on CIFAR10 is 55.78%, visual encoder is RN50.\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "testing_loss = []\n",
-    "testing_acc = []\n",
+    "testing_acc = [] \n",
     "\n",
     "with torch.no_grad():\n",
     "    model.eval()\n",
     "\n",
-    "    ##################### Write your answer here ##################\n",
+    "    for batch_idx, (image, target) in enumerate(test_dataloader): \n",
     "\n",
+    "        image = image.to(device)\n",
+    "        target = target.to(device)\n",
+    "        text_inputs = prompt_encode(prompt)\n",
     "\n",
+    "        logits = model_inference(model, image, text_inputs)\n",
     "\n",
-    "     ###############################################################\n",
+    "        _, predicted = logits.max(1)\n",
+    "        correct = predicted.eq(target).sum().item()\n",
+    "        accuracy = correct / target.size(0)\n",
     "\n",
+    "        testing_acc.append(accuracy)\n",
     "\n",
+    "    # Calculate the average accuracy\n",
+    "    val_acc = sum(testing_acc) / len(testing_acc)\n",
     "\n",
-    "    print(f\"the zero-shot performance on {dataset_name} is {val_acc*100:.2f}%, visual encoder is {VISUAL_BACKBONE}.\")\n",
-    "\n",
-    "\n"
+    "print(f\"The zero-shot performance on {dataset_name} is {val_acc*100:.2f}%, visual encoder is {VISUAL_BACKBONE}.\")\n"
    ]
   }
  ],
