--- a/exercise_03.ipynb
+++ b/exercise_03.ipynb
@@ -17,10 +17,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Looking in indexes: https://pypi.org/simple, https://pypi.ngc.nvidia.com\n",
+      "Collecting ftfy\n",
+      "  Downloading ftfy-6.1.1-py3-none-any.whl (53 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m53.1/53.1 kB\u001b[0m \u001b[31m422.9 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: wcwidth>=0.2.5 in /usr/local/lib/python3.10/dist-packages (from ftfy) (0.2.6)\n",
+      "Installing collected packages: ftfy\n",
+      "Successfully installed ftfy-6.1.1\n",
+      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
+      "\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.2.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.3.1\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpython -m pip install --upgrade pip\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
+    "!pip install ftfy\n",
     "import os\n",
     "import time\n",
     "import os.path as osp\n",
@@ -54,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +558,7 @@
        ")"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,13 +581,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "prompt = 'a photo of a' # you can try different prompt\n",
-    "\n",
+    "# 'airplane', 'automobile', 'bird', 'cat', 'deer', 'dog', 'frog', 'horse', 'ship', 'truck'\n",
     "def prompt_encode(prompt):\n",
+    "    text_inputs=torch.cat([clip.tokenize(f\"a photo of a {c}\") for c in class_names]).to(device)\n",
     "    \"\"\"\n",
     "    Args:\n",
     "        prompt (str): the text prefix before the class\n",
@@ -577,10 +597,6 @@
     "        text_inputs(torch.Tensor)\n",
     "\n",
     "    \"\"\"\n",
-    "    ##################### Write your answer here ##################\n",
-    "    \n",
-    "\n",
-    "    ###############################################################\n",
     "    \n",
     "    return text_inputs\n"
    ]
@@ -602,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,7 +626,11 @@
     "def model_inference(model, image, text_inputs):\n",
     "\n",
     "    ##################### Write your answer here ##################\n",
-    "    \n",
+    "    image_features = model.encode_image(image)\n",
+    "    text_features = model.encode_text(text_inputs)\n",
+    "    image_features /= image_features.norm(dim=-1, keepdim=True)\n",
+    "    text_features /= text_features.norm(dim=-1, keepdim=True)\n",
+    "    logits = (100.0 * image_features @ text_features.T)\n",
     "\n",
     "    ###############################################################\n",
     "\n",
@@ -627,37 +647,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "the zero-shot performance on CIFAR10 is 55.84%, visual encoder is RN50\n"
+      "the zero-shot performance on CIFAR10 is 55.84%, visual encoder is RN50.\n"
      ]
     }
    ],
    "source": [
-    "\n",
     "testing_loss = []\n",
     "testing_acc = []\n",
-    "\n",
+    "# cifar10=CIFAR10(root='/shareddata', train=False,download=True)\n",
+    "correct_predictions=0\n",
     "with torch.no_grad():\n",
     "    model.eval()\n",
-    "\n",
+    "#     print(test_set)   \n",
     "    ##################### Write your answer here ##################\n",
+    "    for image, class_id in test_dataloader:\n",
+    "#         image_input = preprocess(image).unsqueeze(0).to(device)\n",
+    "        image=image.to(device)\n",
+    "        class_id=class_id.to(device)\n",
+    "        logits=model_inference(model,image,prompt_encode(prompt))\n",
+    "#         print(logits)\n",
+    "#         val_acc=logits.mean()\n",
     "\n",
-    "\n",
-    "\n",
+    "        predictions = logits.argmax(dim=-1)\n",
+    "#         print(class_id)\n",
+    "        correct_predictions += (predictions == class_id).sum().item()\n",
+    "    \n",
+    "    val_acc = correct_predictions / len(test_set)\n",
+    "    \n",
     "     ###############################################################\n",
-    "\n",
-    "\n",
     "\n",
     "    print(f\"the zero-shot performance on {dataset_name} is {val_acc*100:.2f}%, visual encoder is {VISUAL_BACKBONE}.\")\n",
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
