--- a/exercise_03.ipynb
+++ b/exercise_03.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +539,7 @@
        ")"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,10 +577,8 @@
     "        text_inputs(torch.Tensor)\n",
     "\n",
     "    \"\"\"\n",
-    "    ##################### Write your answer here ##################\n",
-    "    \n",
     "\n",
-    "    ###############################################################\n",
+    "    text_inputs = torch.cat([clip.tokenize(f'{prompt} {c}') for c in class_names]).to(device)\n",
     "    \n",
     "    return text_inputs\n"
    ]
@@ -602,17 +600,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "def model_inference(model, image, text_inputs):\n",
     "\n",
-    "    ##################### Write your answer here ##################\n",
+    "    image = image.to(device)\n",
+    "    text_inputs = text_inputs.to(device)\n",
     "    \n",
-    "\n",
-    "    ###############################################################\n",
+    "    image_features = model.encode_image(image)\n",
+    "    \n",
+    "    logits, _ = model(image, text_inputs)\n",
+    "    \n",
     "\n",
     "    return logits"
    ]
@@ -627,19 +628,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "the zero-shot performance on CIFAR10 is 55.84%, visual encoder is RN50\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
     "testing_loss = []\n",
     "testing_acc = []\n",
     "\n",
@@ -647,17 +639,35 @@
     "    model.eval()\n",
     "\n",
     "    ##################### Write your answer here ##################\n",
+    "    for images, labels in test_dataloader: \n",
+    "        images = images.to(device)\n",
+    "        labels = labels.to(device)\n",
+    "        \n",
+    "        text_inputs = prompt_encode(prompt)\n",
+    "        logits = model_inference(model, images, text_inputs)\n",
     "\n",
+    "        predictions = torch.argmax(logits, dim=1)\n",
+    "        accuracy = torch.sum(predictions == labels).item() / len(labels)\n",
+    "        testing_acc.append(accuracy)\n",
+    "\n",
+    "    avg_acc = sum(testing_acc) / len(testing_acc)\n",
     "\n",
     "\n",
     "     ###############################################################\n",
     "\n",
     "\n",
     "\n",
-    "    print(f\"the zero-shot performance on {dataset_name} is {val_acc*100:.2f}%, visual encoder is {VISUAL_BACKBONE}.\")\n",
+    "    print(f\"the zero-shot performance on {dataset_name} is {avg_acc*100:.2f}%, visual encoder is {VISUAL_BACKBONE}.\")\n",
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
