--- a/exercise_03.ipynb
+++ b/exercise_03.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -116,20 +116,34 @@
     }
    ],
    "source": [
+    "# 为测试集定义一系列图像转换，使用 torchvision.transforms.Compose\n",
     "transform_cifar10_test = transforms.Compose([\n",
+    "    # 将图像调整大小为 224x224 像素的正方形\n",
     "    transforms.Resize(size=224),\n",
+    "    \n",
+    "    # 从图像中心裁剪出一个 224x224 的正方形\n",
     "    transforms.CenterCrop(size=(224, 224)),\n",
+    "    \n",
+    "    # 将图像转换为 PyTorch 张量\n",
     "    transforms.ToTensor(),\n",
+    "    \n",
+    "    # 使用均值和标准差对图像进行标准化\n",
     "    transforms.Normalize((0.4914, 0.4822, 0.4465), (0.2023, 0.1994, 0.2010)),\n",
     "])\n",
     "\n",
+    "# 使用 torchvision.datasets.CIFAR10 创建 CIFAR-10 测试集\n",
     "test_set = torchvision.datasets.CIFAR10(root='/shareddata', train=False,\n",
     "                                       download=True, transform=transform_cifar10_test)\n",
+    "\n",
+    "# 为测试集创建一个 DataLoader，以高效加载和批处理数据\n",
     "test_dataloader = torch.utils.data.DataLoader(test_set, batch_size=BATCH_SIZE,\n",
     "                                         shuffle=False, num_workers=2)\n",
     "\n",
-    "class_names = ['airplane', 'automobile', 'bird', 'cat', 'deer', 'dog', 'frog', 'horse', 'ship', 'truck']\n",
-    "dataset_name = 'CIFAR10'"
+    "# 为 CIFAR-10 数据集定义类别名称\n",
+    "class_names = ['飞机', '汽车', '鸟', '猫', '鹿', '狗', '青蛙', '马', '船', '卡车']\n",
+    "\n",
+    "# 指定数据集的名称\n",
+    "dataset_name = 'CIFAR10'\n"
    ]
   },
   {
@@ -141,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +553,7 @@
        ")"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,8 +592,7 @@
     "\n",
     "    \"\"\"\n",
     "    ##################### Write your answer here ##################\n",
-    "    \n",
-    "\n",
+    "    text_inputs = torch.cat([clip.tokenize(f\"{prompt} {c}\") for c in class_names]).to(device)\n",
     "    ###############################################################\n",
     "    \n",
     "    return text_inputs\n"
@@ -602,16 +615,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "def model_inference(model, image, text_inputs):\n",
     "\n",
     "    ##################### Write your answer here ##################\n",
+    "#     image_features = model.encode_image(image)\n",
+    "#     text_features = model.encode_text(text_inputs)\n",
+    "    logits_per_image, logits_per_text = model(image,text_inputs)\n",
     "    \n",
-    "\n",
+    "    logits = logits_per_image.softmax(dim=1).cpu().numpy()\n",
     "    ###############################################################\n",
     "\n",
     "    return logits"
@@ -627,37 +642,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "the zero-shot performance on CIFAR10 is 55.84%, visual encoder is RN50\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
     "testing_loss = []\n",
     "testing_acc = []\n",
     "\n",
     "with torch.no_grad():\n",
     "    model.eval()\n",
-    "\n",
     "    ##################### Write your answer here ##################\n",
-    "\n",
-    "\n",
-    "\n",
+    "    for batch_idx, (image, target) in enumerate(test_dataloader):\n",
+    "                text_inputs = prompt_encode(prompt)\n",
+    "                image_inputs = image.to(device)\n",
+    "                \n",
+    "                prob=model_inference(model,image_inputs,text_inputs)\n",
+    "                pred = np.argmax(prob,axis=1)\n",
+    "                \n",
+    "                target=np.array(target)\n",
+    "                \n",
+    "                for i in range(len(pred)):\n",
+    "                    if(pred[i] == target[i]):\n",
+    "                        testing_acc.append(1)\n",
+    "                    else:\n",
+    "                        testing_acc.append(0)\n",
+    "                    \n",
+    "    val_acc = sum(testing_acc) / len(testing_acc)\n",
+    "                \n",
     "     ###############################################################\n",
-    "\n",
-    "\n",
     "\n",
     "    print(f\"the zero-shot performance on {dataset_name} is {val_acc*100:.2f}%, visual encoder is {VISUAL_BACKBONE}.\")\n",
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
