--- a/exercise_03.ipynb
+++ b/exercise_03.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
     "# GAMMA=0.5\n",
     "\n",
     "# CLIP\n",
-    "VISUAL_BACKBONE = 'RN50' # RN50, ViT-B/32, ViT-B/16\n"
+    "VISUAL_BACKBONE = 'RN50' # RN50, ViT-B/32, ViT-B/16"
    ]
   },
   {
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +539,7 @@
        ")"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,24 +562,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "prompt = 'a photo of a' # you can try different prompt\n",
     "\n",
     "def prompt_encode(prompt):\n",
+    "    \n",
     "    \"\"\"\n",
     "    Args:\n",
     "        prompt (str): the text prefix before the class\n",
     "\n",
     "    Returns:\n",
-    "        text_inputs(torch.Tensor)\n",
+    "        text_inputs (torch.Tensor)\n",
     "\n",
     "    \"\"\"\n",
     "    ##################### Write your answer here ##################\n",
-    "    \n",
-    "\n",
+    "    text_inputs = torch.cat([clip.tokenize(prompt + c) for c in test_set.classes]).to(device)\n",
     "    ###############################################################\n",
     "    \n",
     "    return text_inputs\n"
@@ -602,16 +602,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "def model_inference(model, image, text_inputs):\n",
     "\n",
     "    ##################### Write your answer here ##################\n",
-    "    \n",
-    "\n",
+    "    image_inputs = image\n",
+    "    with torch.no_grad():\n",
+    "        logits_per_image, logits_per_text = model(image_inputs, text_inputs)\n",
+    "        logits = logits_per_image.softmax(dim=1).cpu().numpy()\n",
     "    ###############################################################\n",
     "\n",
     "    return logits"
@@ -627,37 +628,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "the zero-shot performance on CIFAR10 is 55.84%, visual encoder is RN50\n"
+      "the zero-shot performance on CIFAR10 is 49.87%, visual encoder is RN50.\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "testing_loss = []\n",
     "testing_acc = []\n",
     "\n",
     "with torch.no_grad():\n",
     "    model.eval()\n",
     "\n",
     "    ##################### Write your answer here ##################\n",
-    "\n",
-    "\n",
-    "\n",
-    "     ###############################################################\n",
-    "\n",
-    "\n",
-    "\n",
-    "    print(f\"the zero-shot performance on {dataset_name} is {val_acc*100:.2f}%, visual encoder is {VISUAL_BACKBONE}.\")\n",
-    "\n",
-    "\n"
+    "with torch.no_grad():\n",
+    "    for images, labels in test_dataloader:\n",
+    "        image_inputs = images.to(device)\n",
+    "        text_inputs = prompt_encode(prompt)\n",
+    "        logits = model_inference(model, image_inputs, text_inputs.to(device))\n",
+    "        prediction = np.argmax(logits, axis=1)\n",
+    "        prediction = torch.tensor(prediction)\n",
+    "        accuracy = (prediction == labels).float().mean().item()\n",
+    "        testing_acc.append(accuracy)\n",
+    "    ###############################################################\n",
+    "val_acc = np.mean(testing_acc)\n",
+    "print(f\"the zero-shot performance on {dataset_name} is {val_acc*100:.2f}%, visual encoder is {VISUAL_BACKBONE}.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
