--- a/exercise_03.ipynb
+++ b/exercise_03.ipynb
@@ -17,7 +17,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !python -m pip install ftfy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,11 +96,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cuda:0\n"
+     ]
+    }
+   ],
    "source": [
-    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")"
+    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+    "print(device)"
    ]
   },
   {
@@ -104,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +557,7 @@
        ")"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,8 +596,8 @@
     "\n",
     "    \"\"\"\n",
     "    ##################### Write your answer here ##################\n",
+    "    text_inputs = torch.cat([clip.tokenize(f\"{prompt} {cname}\")for cname in class_names]).to(device)\n",
     "    \n",
-    "\n",
     "    ###############################################################\n",
     "    \n",
     "    return text_inputs\n"
@@ -602,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,8 +628,10 @@
     "def model_inference(model, image, text_inputs):\n",
     "\n",
     "    ##################### Write your answer here ##################\n",
-    "    \n",
+    "    image = image.to(device)\n",
+    "    text_inputs = text_inputs.to(device)\n",
     "\n",
+    "    logits, _ = model(image, text_inputs)\n",
     "    ###############################################################\n",
     "\n",
     "    return logits"
@@ -627,14 +647,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "the zero-shot performance on CIFAR10 is 55.84%, visual encoder is RN50\n"
+      "the zero-shot performance on CIFAR10 is 55.84%, visual encoder is RN50.\n"
      ]
     }
    ],
@@ -643,20 +663,24 @@
     "testing_loss = []\n",
     "testing_acc = []\n",
     "\n",
+    "text_inputs = prompt_encode(prompt)\n",
+    "\n",
+    "cnt = 0\n",
+    "correct_cnt = 0\n",
+    "\n",
     "with torch.no_grad():\n",
     "    model.eval()\n",
-    "\n",
+    "    \n",
     "    ##################### Write your answer here ##################\n",
+    "    for image, target in test_dataloader:\n",
+    "        target.to(device)\n",
+    "        logits = model_inference(model, image, text_inputs)\n",
+    "        probs = logits.softmax(dim = -1).argmax(dim = 1).cpu()\n",
+    "        testing_acc.extend(probs == target)\n",
+    "    val_acc = sum(testing_acc) / len(testing_acc)\n",
+    "    ################################################################\n",
     "\n",
-    "\n",
-    "\n",
-    "     ###############################################################\n",
-    "\n",
-    "\n",
-    "\n",
-    "    print(f\"the zero-shot performance on {dataset_name} is {val_acc*100:.2f}%, visual encoder is {VISUAL_BACKBONE}.\")\n",
-    "\n",
-    "\n"
+    "    print(f\"the zero-shot performance on {dataset_name} is {val_acc*100:.2f}%, visual encoder is {VISUAL_BACKBONE}.\")\n"
    ]
   }
  ],
