--- a/exercise_03.ipynb
+++ b/exercise_03.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +539,7 @@
        ")"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,8 +578,8 @@
     "\n",
     "    \"\"\"\n",
     "    ##################### Write your answer here ##################\n",
+    "    text_inputs=clip.tokenize(prompt).to(device)\n",
     "    \n",
-    "\n",
     "    ###############################################################\n",
     "    \n",
     "    return text_inputs\n"
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,11 +610,13 @@
     "def model_inference(model, image, text_inputs):\n",
     "\n",
     "    ##################### Write your answer here ##################\n",
-    "    \n",
-    "\n",
+    "#     image_features=model.encode_image(image)\n",
+    "#     text_features=model.encode_text(text_inputs)\n",
+    "    logits_image, logits_text=model(image, text_inputs)\n",
+    "#     probs=logits_image.softmax(dim=-1).cpu().numpy()\n",
     "    ###############################################################\n",
     "\n",
-    "    return logits"
+    "    return logits_image"
    ]
   },
   {
@@ -627,14 +629,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "the zero-shot performance on CIFAR10 is 55.84%, visual encoder is RN50\n"
+      "the zero-shot performance on CIFAR10 is 55.84%, visual encoder is RN50.\n"
      ]
     }
    ],
@@ -647,9 +649,15 @@
     "    model.eval()\n",
     "\n",
     "    ##################### Write your answer here ##################\n",
-    "\n",
-    "\n",
-    "\n",
+    "    text_inputs=torch.cat([prompt_encode(f\"a photo of a {c}\") for c in test_set.classes]).to(device)\n",
+    "    for data, labels in test_dataloader:\n",
+    "        image_inputs=data.squeeze(0).to(device)\n",
+    "        logits=model_inference(model,image_inputs,text_inputs)\n",
+    "        probs=logits.softmax(dim=-1).cpu().numpy()\n",
+    "        preds=np.argmax(probs, axis=1)\n",
+    "        preds=torch.tensor(preds)\n",
+    "        testing_acc.extend(preds==labels)\n",
+    "    val_acc=np.sum(testing_acc)/len(testing_acc)\n",
     "     ###############################################################\n",
     "\n",
     "\n",
@@ -658,6 +666,13 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
