--- a/exercise_03.ipynb
+++ b/exercise_03.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,28 +54,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # random seed\n",
-    "# SEED = 1 \n",
-    "# NUM_CLASS = 10\n",
-    "\n",
-    "# Training\n",
-    "BATCH_SIZE = 128\n",
-    "# NUM_EPOCHS = 30\n",
-    "# EVAL_INTERVAL=1\n",
-    "# SAVE_DIR = './log'\n",
-    "\n",
-    "# # Optimizer\n",
-    "# LEARNING_RATE = 1e-1\n",
-    "# MOMENTUM = 0.9\n",
-    "# STEP=5\n",
-    "# GAMMA=0.5\n",
-    "\n",
-    "# CLIP\n",
-    "VISUAL_BACKBONE = 'RN50' # RN50, ViT-B/32, ViT-B/16\n"
+    "VISUAL_BACKBONE = 'RN50' # RN50, ViT-B/32, ViT-B/16\n",
+    "BATCH_SIZE = 128"
    ]
   },
   {
@@ -87,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +523,7 @@
        ")"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,27 +546,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
-    "prompt = 'a photo of a' # you can try different prompt\n",
-    "\n",
-    "def prompt_encode(prompt):\n",
-    "    \"\"\"\n",
-    "    Args:\n",
-    "        prompt (str): the text prefix before the class\n",
-    "\n",
-    "    Returns:\n",
-    "        text_inputs(torch.Tensor)\n",
-    "\n",
-    "    \"\"\"\n",
-    "    ##################### Write your answer here ##################\n",
-    "    \n",
-    "\n",
-    "    ###############################################################\n",
-    "    \n",
-    "    return text_inputs\n"
+    "text_inputs = clip.tokenize([f\"a photo of a {class_name}\" for class_name in class_names]).to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text_inputs = clip.tokenize([f\"this is a photo of a {class_name}\" for class_name in class_names]).to(device)"
    ]
   },
   {
@@ -602,16 +579,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "def model_inference(model, image, text_inputs):\n",
+    "def model_inference(model, images):\n",
     "\n",
     "    ##################### Write your answer here ##################\n",
+    "    logits = model.encode_image(images)\n",
     "    \n",
-    "\n",
     "    ###############################################################\n",
     "\n",
     "    return logits"
@@ -627,37 +604,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "the zero-shot performance on CIFAR10 is 55.84%, visual encoder is RN50\n"
+      "Accuracy of the network on the 16 test images: 43.75%\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "testing_loss = []\n",
-    "testing_acc = []\n",
-    "\n",
     "with torch.no_grad():\n",
     "    model.eval()\n",
-    "\n",
     "    ##################### Write your answer here ##################\n",
+    "    for images, labels in test_dataloader:\n",
+    "        images = images.to(device)\n",
+    "        labels = labels.to(device)\n",
+    "        image_features = model_inference(model,images)\n",
+    "        text_features = model.encode_text(text_inputs)\n",
+    "        # 计算图像和文本之间的相似性\n",
+    "        similarity = (100.0 * image_features @ text_features.T).softmax(dim=-1)\n",
+    "        # 获取预测的类别\n",
+    "        predictions = similarity.argmax(dim=-1)\n",
+    "        # 更新正确预测的数量和总数量\n",
+    "        total = 0\n",
+    "        correct = 0\n",
+    "        total += labels.size(0)\n",
+    "        correct += (predictions == labels).sum().item()\n",
     "\n",
-    "\n",
-    "\n",
-    "     ###############################################################\n",
-    "\n",
-    "\n",
-    "\n",
-    "    print(f\"the zero-shot performance on {dataset_name} is {val_acc*100:.2f}%, visual encoder is {VISUAL_BACKBONE}.\")\n",
-    "\n",
-    "\n"
+    "# 计算准确率\n",
+    "accuracy = 100 * correct / total\n",
+    "print(f'Accuracy of the network on the {total} test images: {accuracy}%')\n",
+    "     ###############################################################\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
